# kubernetes-local-dev-series

./: .gitignore  CLAUDE.md  README.md
docs/: 00-series-introduction.md  01-k3d-setup.md  02-minikube-setup.md  03-kind-setup.md  04-comparison.md
k3d-setup/: README.md  cluster-config.yaml  setup.sh  test.sh
k3d-setup/manifests/: api-deployment.yaml  configmap.yaml  data-deployment.yaml  ingress.yaml  namespace.yaml  secrets.yaml
kind-setup/: README.md  cluster-config.yaml  setup.sh  test.sh
kind-setup/manifests/: api-deployment.yaml  configmap.yaml  ingress.yaml  namespace.yaml  services.yaml
minikube-setup/: README.md  cluster-config.yaml  setup.sh  test.sh
minikube-setup/manifests/: configmap.yaml  data-deployment.yaml  ingress.yaml  namespace.yaml  services.yaml
scripts/: build-images.sh  cleanup.sh  test-all.sh
services/api-service/: .dockerignore  Dockerfile  Makefile  README.md  pyproject.toml
services/api-service/app/: config.py  main.py  models.py
services/api-service/app/routers/: health.py  users.py
services/api-service/tests/: test_health.py  test_users.py
services/data-service/: .dockerignore  Dockerfile  Makefile  README.md  pom.xml  spotbugs-exclude.xml
services/data-service/src/main/java/dev/docnyte/dataservice/: DataServiceApplication.java
services/data-service/src/main/java/dev/docnyte/dataservice/config/: LogbookConfig.java
services/data-service/src/main/java/dev/docnyte/dataservice/controller/: DataController.java
services/data-service/src/main/java/dev/docnyte/dataservice/dto/: UserDTO.java
services/data-service/src/main/java/dev/docnyte/dataservice/entity/: User.java
services/data-service/src/main/java/dev/docnyte/dataservice/exception/: GlobalExceptionHandler.java
services/data-service/src/main/java/dev/docnyte/dataservice/mapper/: UserMapper.java
services/data-service/src/main/java/dev/docnyte/dataservice/repository/: UserRepository.java
services/data-service/src/main/resources/: application.yml
services/data-service/src/test/java/dev/docnyte/dataservice/: DataServiceApplicationTest.java
services/data-service/src/test/resources/: application-test.yml
(+6 files in other folders)
